--- a/src/pages/pages-styles/landing.css
+++ b/src/pages/pages-styles/landing.css
@@ -1,31 +1,32 @@
-.carousel-container {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-}
-
 .carousel {
-    width: 100%;
-    height: 700px;
-    position: absolute;
+    width: 80%;
+    height: 50%;
+    max-height: 50%;
+    position: relative;
     margin-top: 1rem;
+    justify-content: center;
+    margin-left: 10rem;
+    margin-right: 10rem;
 }
 
 .image-carousel {
+    position: relative;
     width: 100%;
-    height: 100%;
-    min-height: 60rem;
+    max-width: 100%;
+    min-height: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
 }
 
 .text-carousel {
-    flex: 80%;
-    height: 100%;
-    display: grid;
-    place-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    bottom: 10%;
+    left: 5%;
+    z-index: 20;
+    color: wheat;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
